--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.3",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-cli": "^2.12.79",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-gdpr-cookies": "^1.0.7",
     "gatsby-plugin-manifest": "^2.4.11",
-    "gatsby-plugin-mdx": "^1.2.30",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-preact": "^4.0.9",
     "gatsby-plugin-react-helmet": "^3.3.10",
@@ -22,9 +22,6 @@
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.3.23",
-    "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-json": "^2.4.6",
     "gatsby-transformer-sharp": "^2.5.5",
