--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-cli": "^2.12.79",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-catch-links": "^2.3.11",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-netlify": "^2.3.13",
     "gatsby-plugin-offline": "^3.2.26",
